clean + delete double lookup + use array instead of stream